Fix z-index for navBar

--- a/frontend/styles/NavBar.module.css
+++ b/frontend/styles/NavBar.module.css
@@ -1,8 +1,6 @@
 .navBarContainer {
     position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: -999;
+    z-index: 999;
 }
 
 .navBar {
@@ -11,7 +9,7 @@
     width: 100%;
     height: 50px;
     background-color: var(--gold);
-    z-index: inherit;
+    z-index: 999;
 }
 
 .logo {
