--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -25,10 +25,22 @@ a {
   }
 }
 
+.vsc-initialized {
+  z-index: -9999;
+  position: relative;
+}
+
+#__next {
+  z-index: -9999;
+  position: relative;
+}
+
 .container {
   width: 100%;
   height: 100%;
   margin-top: 50px;
+  z-index: -999;
+  position: relative;
 }
 
 :root {
